<resources>
    <string name="app_name">personalChef</string>
    <string name="action_settings">action_settings</string>
    <string name="Home">\@string/Home</string>
    <string name="signup">\@string/signup</string>
    <string name="login">\@string/login</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="recipename">RecipeName</string>
    <string name="meals">Meals</string>
    <string name="nbrOfPpl">Number of People</string>
    <string name="additionalInformation">Additional Information</string>
    <string name="ingredients">Ingredients</string>
    <string name="african_meals">African Meals</string>
    <string name="specialised_chef">Specialized Chef</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
</resources>