<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".booking.BookingActivity"
    android:id="@+id/mess">

    <TextView
        android:id="@+id/booktitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Book a Chef"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/booktitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/secondName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/second_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/meals"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/meals" />

        <EditText
            android:id="@+id/nbrOfPpl"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nbrOfPpl" />
    </LinearLayout>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@+id/linear3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        android:hint="@string/address"
        android:inputType="text"
        android:maxLength="30" />

    <EditText
        android:id="@+id/addInfo"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_below="@+id/address"
        android:hint="@string/additionalInformation"
        android:inputType="text"
        />

    <Button
        android:id="@+id/bookingButton"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="147dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="Book now"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>