<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AfricanMeals.RecipeActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/text_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recipename"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/recipe_chef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specialised_chef"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="18dp"
                android:textSize="20sp"
                android:text="@string/ingredients"

                />
            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recipename"
                android:textSize="21sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="18dp"
                android:textSize="20sp"
                android:text="@string/ingredients"

                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>